--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,8 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="colorPrimary">#0097a7</color>
-    <color name="colorPrimaryDark">#00838f</color>
+    <color name="colorPrimary">#8BC34A</color>
+    <color name="colorPrimaryDark">#33691E</color>
     <color name="colorAccent">#e91e63</color>
     <color name="black">#000000</color>
     <color name="fade_black">#50000000</color>
